@@ -1,59 +1,46 @@
 package com.cloudbees.examples.bank.demo;
 
-import static org.junit.Assert.assertNotNull;
-
-import java.net.URL;
-import java.util.LinkedList;
-import java.util.List;
-
 import org.junit.After;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.TestName;
 import org.junit.runner.RunWith;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.remote.CapabilityType;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.context.embedded.LocalServerPort;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.junit4.SpringRunner;
 
-import com.saucelabs.common.SauceOnDemandAuthentication;
-import com.saucelabs.common.SauceOnDemandSessionIdProvider;
-import com.saucelabs.junit.ConcurrentParameterized;
-import com.saucelabs.junit.SauceOnDemandTestWatcher;
+import java.net.URI;
+
+import static org.junit.Assert.assertNotNull;
+
 
 /**
- * Demonstrates how to write a JUnit test that runs tests against Sauce Labs
+ * Demonstrates how to write a JUnit test that runs tests against Selenium
  * using multiple browsers in parallel.
  * <p/>
- * The test also includes the {@link SauceOnDemandTestWatcher} which will invoke
- * the Sauce REST API to mark the test as passed or failed.
  * 
- * @author Andy Pemberton
+ * @author Andy Pemberton, Kurt Madel
  */
-@RunWith(ConcurrentParameterized.class)
-public class MobileDepositFunctionalTests implements SauceOnDemandSessionIdProvider {
+@RunWith(SpringRunner.class)
+@SpringBootTest(webEnvironment= SpringBootTest.WebEnvironment.DEFINED_PORT)
+public class MobileDepositFunctionalTests  {
 
-	/**
-	 * Constructs a {@link SauceOnDemandAuthentication} instance using the
-	 * supplied user name/access key. To use the authentication supplied by
-	 * environment variables or from an external file, use the no-arg
-	 * {@link SauceOnDemandAuthentication} constructor.
-	 */
-	public SauceOnDemandAuthentication authentication = new SauceOnDemandAuthentication(
-			"cb_cloudbees-sa", "0ce882ef-06c4-4439-8b50-09027e4dd6d7");
+	@LocalServerPort
+	int port;
 
-	/**
-	 * JUnit Rule which will mark the Sauce Job as passed/failed when the test
-	 * succeeds or fails.
-	 */
-	@Rule
-	public SauceOnDemandTestWatcher resultReportingTestWatcher = new SauceOnDemandTestWatcher(
-			this, authentication);
+    @Value("${test.host}")
+    private String testHost;
 
-	@Rule
-	public TestName name = new TestName();
+    @Value("${test.browser.name}")
+    private String testBrowserName;
+
+    @Value("${test.browser.version}")
+    private String testBrowserVersion;
+
 
 	/**
 	 * Represents the browser to be used as part of the test run.
@@ -67,55 +54,19 @@ public class MobileDepositFunctionalTests implements SauceOnDemandSessionIdProvi
 	 * Represents the version of the browser to be used as part of the test run.
 	 */
 	private String version;
-	/**
-	 * Instance variable which contains the Sauce Job Id.
-	 */
-	private String sessionId;
 
 	/**
 	 * The {@link WebDriver} instance which is used to perform browser
 	 * interactions with.
 	 */
-	private WebDriver driver;
+	private RemoteWebDriver driver;
 
-	/**
-	 * Constructs a new instance of the test. The constructor requires three
-	 * string parameters, which represent the operating system, version and
-	 * browser to be used when launching a Sauce VM. The order of the parameters
-	 * should be the same as that of the elements within the
-	 * {@link #browsersStrings()} method.
-	 * 
-	 * @param os
-	 * @param version
-	 * @param browser
-	 */
-	public MobileDepositFunctionalTests(String os, String version, String browser) {
-		super();
-		this.os = os;
-		this.version = version;
-		this.browser = browser;
-	}
-
-	/**
-	 * @return a LinkedList containing String arrays representing the browser
-	 *         combinations the test should be run against. The values in the
-	 *         String array are used as part of the invocation of the test
-	 *         constructor
-	 */
-	@ConcurrentParameterized.Parameters
-	public static List<String[]> browsersStrings() {
-		LinkedList<String[]> browsers = new LinkedList<String[]>();
-		browsers.add(new String[] { "Windows 8.1", "11", "internet explorer" });
-		browsers.add(new String[] { "OSX 10.8", "6", "safari" });
-		return browsers;
-	}
 
 	/**
 	 * Constructs a new {@link RemoteWebDriver} instance which is configured to
 	 * use the capabilities defined by the {@link #browser}, {@link #version}
 	 * and {@link #os} instance variables, and which is configured to run
-	 * against ondemand.saucelabs.com, using the username and access key
-	 * populated by the {@link #authentication} instance.
+	 * against a standalone selenium docker container
 	 * 
 	 * @throws Exception
 	 *             if an error occurs during the creation of the
@@ -123,20 +74,14 @@ public class MobileDepositFunctionalTests implements SauceOnDemandSessionIdProvi
 	 */
 	@Before
 	public void setUp() throws Exception {
-		DesiredCapabilities capabilities = new DesiredCapabilities();
-		capabilities.setCapability(CapabilityType.BROWSER_NAME, browser);
-		if (version != null) {
-			capabilities.setCapability(CapabilityType.VERSION, version);
-		}
-		capabilities.setCapability(CapabilityType.PLATFORM, os);
-		capabilities.setCapability("name",
-				"Mobile Deposit: " + name.getMethodName());
-		this.driver = new RemoteWebDriver(new URL("http://"
-				+ authentication.getUsername() + ":"
-				+ authentication.getAccessKey()
-				+ "@ondemand.saucelabs.com:80/wd/hub"), capabilities);
-
-		this.sessionId = (((RemoteWebDriver) driver).getSessionId()).toString();
+        System.out.println("testHost: " + testHost);
+		DesiredCapabilities browser = new DesiredCapabilities();
+		browser.setBrowserName(testBrowserName);
+		browser.setVersion(testBrowserVersion);
+		driver = new RemoteWebDriver(
+				URI.create("http://" + testHost + ":4444/wd/hub").toURL(),
+				browser
+		);
 	}
 
 	/**
@@ -146,7 +91,8 @@ public class MobileDepositFunctionalTests implements SauceOnDemandSessionIdProvi
 	 */
 	@Test
 	public void hasAnAccountNumber() throws Exception {
-		driver.get("http://54.165.201.3:82/deposit");
+		String depositUrl = "http://" + testHost + ":" + port + "/deposit/";
+		driver.get(depositUrl);
 		assertNotNull(driver.findElement(By.className("account-number")));
 	}
 
@@ -169,12 +115,4 @@ public class MobileDepositFunctionalTests implements SauceOnDemandSessionIdProvi
 		driver.quit();
 	}
 
-	/**
-	 * 
-	 * @return the value of the Sauce Job id.
-	 */
-	@Override
-	public String getSessionId() {
-		return sessionId;
-	}
 }
